# Prolepsis

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: test.yml
benchmark/: harness.py  run_benchmark.py
docs/: ALGORITHM.md  ARCHITECTURE.md
prolepsis/: __init__.py  config.py
prolepsis/core/: __init__.py  kv_cache.py  rejection_sampler.py  sampling_utils.py  speculative_engine.py
prolepsis/kernels/: __init__.py  verify_kernel.py
prolepsis/models/: __init__.py  wrapper.py
prolepsis/utils/: __init__.py  benchmark_visualization.py  logger.py  visualizer.py
prolepsis_results/: benchmark_results.json  benchmark_summary.txt  prompt_and_responses.txt  system_info.txt  test_log.txt
prolepsis_results/telemetry/: speculative_trace.txt
scripts/: build_release_archive.py  generate_prompts.py  package_results_archive.py
tests/: test_engine_mock.py  test_integration.py  test_kv_cache.py  test_rejection_sampler.py  test_sampling_utils.py
