[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Prolepsis"
version = "1.0.0"
description = "Faster LLM inference via speculative decoding"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Muskula Rahul"}
]
keywords = ["llm", "inference", "speculative-decoding", "transformers", "triton"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "numpy>=1.24.0",
    "accelerate>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
triton = [
    "triton>=2.1.0",
]
benchmark = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]
vis = [
    "matplotlib>=3.7.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/iamrahulreddy/Prolepsis"
Documentation = "https://github.com/iamrahulreddy/Prolepsis#readme"
Repository = "https://github.com/iamrahulreddy/Prolepsis"

[tool.setuptools.packages.find]
where = ["."]
include = ["prolepsis*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
